2013-11-27  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an option for ignoring photons from hadron/tau decays in LeptonClusters.

2013-11-22  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Particle::fromBottom/Charm/Tau() members. LHCb were
	aready mocking this up, so it seemed sensible to add it to the
	interface as a more popular (and even less dangerous) version of
	hasAncestor().

	* Adding an empty() member to the JetAlg interface.

2013-11-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the GSL lib path to the library path in the env scripts and the rivet-config --ldflags output.

2013-10-25  Andy Buckley  <andy.buckley@cern.ch>

	* 2.0.0 release!!!!!!

2013-10-24  Andy Buckley  <andy.buckley@cern.ch>

	* Supporting zsh completion via bash completion compatibility.

2013-10-22  Andy Buckley  <andy.buckley@cern.ch>

	* Updating the manual to describe YODA rather than AIDA and the new rivet-cmphistos script.

	* bin/make-plots: Adding paths to error messages in histogram combination.

	* CDF_2005_S6217184: fixes to low stats errors and final scatter plot binning.

2013-10-21  Andy Buckley  <andy.buckley@cern.ch>

	* Several small fixes in jet shape analyses, SFM_1984, etc. found
	in the last H++ validation run.

2013-10-18  Andy Buckley  <andy.buckley@cern.ch>

	* Updates to configure and the rivetenv scripts to try harder to discover YODA.

2013-09-26  Andy Buckley  <andy.buckley@cern.ch>

	* Now bundling Cython-generated files in the tarballs, so Cython
	is not a build requirement for non-developers.

2013-09-24  Andy Buckley  <andy.buckley@cern.ch>

	* Removing unnecessary uses of a momentum() indirection when
	accessing kinematic variables.

	* Clean-up in Jet, Particle, and ParticleBase, in particular
	splitting PID functions on Particle from those on PID codes, and
	adding convenience kinematic functions to ParticleBase.

2013-09-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add the -avoid-version flag to libtool.
